<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/galge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/status_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/ord_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#0000FF"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/synligord_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/synligord"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/antalForkert_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/antalForkertBogstaver"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/brugteBogstave_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brugteBogstaver"
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bogstave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skrivBogstaver"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/charEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >
        </EditText>

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>